// Генератор клиента Prisma
generator client {
  provider = "prisma-client-js"
}

// Конфигурация источника данных (PostgreSQL)
datasource db {
  provider = "postgresql"
  url      = env("DATABASE_URL")
}

// Модель пользователя системы
model User {
  id            String    @id @default(cuid()) // Уникальный идентификатор
  name          String?   // Имя пользователя
  email         String    @unique // Электронная почта (уникальная)
  password      String    // Хешированный пароль
  ownedProjects Project[] @relation("ProjectOwner") // Проекты, где я создатель
  memberProjects ProjectMember[] // Связь через промежуточную таблицу ролей
  assignedTasks Task[]    @relation("TaskAssignees") // Связь с назначенными задачами
  comments      Comment[] // Мои комментарии
  activities    Activity[] // Мои действия в системе
  createdAt     DateTime  @default(now()) // Дата создания
  updatedAt     DateTime  @updatedAt // Дата обновления
}

// Модель проекта
model Project {
  id          String   @id @default(cuid()) // ID проекта
  name        String   // Название
  description String?  // Описание
  ownerId     String   // ID владельца
  owner       User     @relation("ProjectOwner", fields: [ownerId], references: [id]) // Связь с владельцем
  members     ProjectMember[] // Список участников с ролями
  tasks       Task[]   // Список задач в проекте
  createdAt   DateTime @default(now()) // Дата создания
  updatedAt   DateTime @updatedAt // Дата обновления
}

// Промежуточная таблица для участников проекта и их ролей
model ProjectMember {
  id        String   @id @default(cuid())
  projectId String
  userId    String
  role      ProjectRole @default(VIEWER)
  project   Project  @relation(fields: [projectId], references: [id], onDelete: Cascade)
  user      User     @relation(fields: [userId], references: [id])

  @@unique([projectId, userId]) // Ограничение: один пользователь - одна роль в проекте
}

enum ProjectRole {
  ADMIN  // Может всё (редактировать проект, добавлять людей, двигать задачи)
  EDITOR // Может двигать и редактировать задачи
  VIEWER // Только просмотр
}

// Модель задачи (Task)
model Task {
  id          String   @id @default(cuid()) // ID задачи
  title       String   // Заголовок
  description String?  // Описание
  status      Status   @default(TODO) // Текущий статус
  priority    Priority @default(MEDIUM) // ПРИОРИТЕТ
  order       Float    @default(0)    // Порядок отображения (для сортировки)
  deadline    DateTime? // Крайний срок
  projectId   String   // ID проекта
  project     Project  @relation(fields: [projectId], references: [id], onDelete: Cascade) // Связь с проектом
  assignees   User[]   @relation("TaskAssignees") // МНОЖЕСТВЕННЫЕ ИСПОЛНИТЕЛИ
  comments    Comment[] // Комментарии к задаче
  activities  Activity[] // История изменений задачи
  createdAt   DateTime @default(now()) // Дата создания
  updatedAt   DateTime @updatedAt // Дата обновления
}

enum Priority {
  LOW
  MEDIUM
  HIGH
  URGENT
}

// Модель для комментариев к задаче
model Comment {
  id        String   @id @default(cuid())
  text      String   // Текст комментария
  taskId    String
  task      Task     @relation(fields: [taskId], references: [id], onDelete: Cascade)
  authorId  String
  author    User     @relation(fields: [authorId], references: [id])
  createdAt DateTime @default(now())
  updatedAt DateTime @updatedAt
}

// Модель для истории изменений (лог активностей)
model Activity {
  id        String   @id @default(cuid())
  type      String   // Тип события (e.g., "STATUS_CHANGE", "ASSIGNED", "CREATED")
  content   String?  // Дополнительная информация (напр. старое/новое значение)
  taskId    String
  task      Task     @relation(fields: [taskId], references: [id], onDelete: Cascade)
  userId    String
  user      User     @relation(fields: [userId], references: [id])
  createdAt DateTime @default(now())
}

// Перечисление возможных статусов задачи по Kanban
enum Status {
  TODO        // К выполнению
  IN_PROGRESS // В работе
  REVIEW      // На ревью
  TESTING     // На тестировании
  DONE        // Готово
}
